# hailstorm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
private/: hailstorm_array.hxx  hailstorm_data_writer.hxx  hailstorm_memutils.hxx  hailstorm_operations.cxx  hailstorm_task.hxx  hailstorm_tracked_memory.hxx
public/hailstorm/: hailstorm.hxx  hailstorm_operations.hxx  hailstorm_types.hxx
